<?xml version="1.0" encoding="utf-8"?>
<!--Fragment that allows user to add a new trail to the database-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:autoSizeTextType="uniform"
        android:text="@string/app_name"
        android:layout_gravity="center"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/trail_name"
        android:hint="@string/trail_name_hint"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="text"
        />

    <EditText
        android:id="@+id/trail_distance"
        android:hint="@string/trail_distance_imperial_hint"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:inputType="numberDecimal"
        />

    <EditText
        android:id="@+id/latitude_edit_text"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/trail_latitude_hint"
        android:inputType="numberDecimal|numberSigned"/>

    <EditText
        android:id="@+id/longitude_edit_text"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:hint="@string/trail_longitude_hint"
        android:inputType="numberDecimal|numberSigned"/>

    <Button
        android:id="@+id/create_trail_button"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/green"
        android:text="@string/create_trail_button_text"/>

</LinearLayout>