<?xml version="1.0" encoding="utf-8"?>
<!--Fragment to track time and distance of a workout-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/time_display"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:autoSizeTextType="uniform"
        android:textAlignment="center"
        android:text="@string/default_time_display"
        />

    <TextView
        android:id="@+id/distance_display"
        android:layout_width="wrap_content"
        android:minWidth="50dp"
        android:layout_height="100dp"
        android:autoSizeTextType="uniform"
        android:layout_gravity="center"
        />

    <Button
        android:id="@+id/start_run_button"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/green"
        android:text="@string/start_workout_button_text"/>

    <Button
        android:id="@+id/pause_run_button"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/green"
        android:text="@string/pause_workout_button_text"/>

    <Button
        android:id="@+id/finish_run_button"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/green"
        android:text="@string/finish_workout_button_text"/>
    <Button
        android:id="@+id/save_run_button"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/green"
        android:text="@string/save_workout_button_text"/>

    <Button
        android:id="@+id/discard_run_button"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/green"
        android:text="@string/discard_workout_button_text"/>

</LinearLayout>