<?xml version="1.0" encoding="utf-8"?>
<!--Fragment that allows a user to create an account or login-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:autoSizeTextType="uniform"
        android:text="@string/app_name"
        android:textColor="@color/green"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/green"
        android:text="@string/login_button_text"/>

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/green"
        android:text="@string/create_account_button_text"/>

</LinearLayout>